# TBC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  env.source  requirements.txt
cmake/: FindOrtoolsDeps.cmake
docs/: CMakeLists.txt  design.md  dev.md  hal2codegen.puml
docs/umls/: converter2operator.puml  converter_design.puml  detail_general.puml  general.puml  hal2codegen.puml  kernel2hal.puml  operator2kernel.puml
experimental/: CMakeLists.txt  ortools_demo.cpp
include/: CMakeLists.txt  initAll.h
include/capi/: dialects.h  registAll.h
include/conversions/: CMakeLists.txt  Pass.td  conversion.h
include/conversions/KernelsToHals/: kernelsTohals.h  npuV1Lowering.h  npuV2Lowering.h
include/conversions/OperatorsToKernels/: opLowering.h  opertorsTokernels.h
include/dialects/: CMakeLists.txt
include/dialects/hals/IR/: CMakeLists.txt  Hals.td  hals.h  hals.td  halsStructs.h
include/dialects/hals/transforms/: CMakeLists.txt  Pass.td  pass.h
include/dialects/kernels/: CMakeLists.txt
include/dialects/kernels/IR/: CMakeLists.txt  Kernels.td  kernels.h
include/dialects/operators/: CMakeLists.txt
include/dialects/operators/IR/: CMakeLists.txt  Operators.td  operator.h
include/dialects/operators/pdll/: CMakeLists.txt  CommonConstraints.pdll  CommonRewrites.pdll
include/dialects/operators/pdll/Canonical/: AddPatterns.pdll  CMakeLists.txt
include/dialects/operators/transforms/: CMakeLists.txt  pass.h  pass.td
include/dialects/operators/transforms/platform/: CMakeLists.txt  platformPass.td  platormPassRegistry.h
include/interfaces/: CMakeLists.txt  ExternalExecuteInterface.td  LayerGroupInterface.td  LayergroupInterface.h  MemInfoInferInterface.td  PackWeightInterface.td  ShapeInferInterface.td  TypeInferInterface.td  externalExe_interface.h  memInfoInfer_interface.h  packweightInterface.h  shapeInfer_interface.h  typeInfer_interface.h
include/support/: CMakeLists.txt  Utils.td  float16.h  float8.h  log.h  mathutil.h  module.h  patterns.h  tensorfile.h  utils.h
include/support/targets/: params.h  target.h
include/traits/: Traits.td  traits.h
lib/: CMakeLists.txt  initAll.cpp
lib/capi/: CMakeLists.txt  dialects.cpp  registAll.cpp
lib/conversions/: CMakeLists.txt
lib/conversions/kernelsToHals/: CMakeLists.txt
lib/conversions/kernelsToHals/npuv1/: Conv2dLowering.cpp  EltwiseConstOpLowering.cpp  LutOpLoweing.cpp  Pool2dLowering.cpp  ReturnOpLowering.cpp  inputOpLowering.cpp  npuV1Lowering.cpp
lib/conversions/kernelsTohals/: CMakeLists.txt  kernelsTohals.cpp
lib/conversions/kernelsTohals/npuv1/: EltwiseOpLowering.cpp  LutOpLoweing.cpp  WeightOpLowering.cpp  npuV1Lowering.cpp
lib/conversions/kernelsTohals/npuv2/: npuV2Lowering.cpp
lib/conversions/operatorsToKernels/: CMakeLists.txt  operatorsTokernels.cpp
lib/conversions/operatorsToKernels/opLowering/: ActivationLut.cpp  AddConstOp.cpp  AddOp.cpp  ConcatOp.cpp  ConvOp.cpp  DivOp.cpp  MaxPoolOp.cpp  MulConstOp.cpp  MulOp.cpp  PadOp.cpp  ReluOp.cpp  SubConst.cpp  SubOp.cpp  opLowering.cpp
lib/dialects/: CMakeLists.txt
lib/dialects/hals/: CMakeLists.txt
lib/dialects/hals/IR/: hals.cpp  halsTypes.cpp
lib/dialects/hals/interfaces/: Merge.cpp  PackedWeightGroup.cpp  Tile.cpp  Weight.cpp
lib/dialects/hals/transforms/: assginTensorInfosPass.cpp  fusePackedWeightToOnePass.cpp  packWeightPass.cpp
lib/dialects/hals/transforms/layergroup/: layergroupPass.cpp
lib/dialects/kernels/: CMakeLists.txt
lib/dialects/kernels/IR/: kernels.cpp
lib/dialects/kernels/interfaces/: CompareConstOp.cpp  CompareOp.cpp  Conv2d.cpp  Permute.cpp  PoolOp.cpp  ReduceOp.cpp  SliceOp.cpp
lib/dialects/kernels/transforms/: assginTargetPass.cpp  opreorderPass.cpp  targetDependentPass.cpp
lib/dialects/operators/: CMakeLists.txt
lib/dialects/operators/IR/: operators.cpp
lib/dialects/operators/canonicalize/: Add.cpp  Arg.cpp  BatchNorm.cpp  Compare.cpp  CompareConst.cpp  Concat.cpp  Conv.cpp  Deconv.cpp  Depth2Space.cpp  Div.cpp  Expand.cpp  Gather.cpp  GroupNorm.cpp  Interp.cpp  LayerNorm.cpp  Loop.cpp  MaskedFill.cpp  MatMul.cpp  Max.cpp  MeshGrid.cpp  Min.cpp  Mul.cpp  MulConst.cpp  Normalize.cpp  PRelu.cpp  Pack.cpp  Pad.cpp  Permute.cpp  Pow.cpp  PriorBox.cpp  Reciprocal.cpp  Reduce.cpp  Relu.cpp  Repeat.cpp  Reshape.cpp  Scale.cpp  Slice.cpp  SliceAxis.cpp  Split.cpp  Squeeze.cpp  (+8 more)
lib/dialects/operators/interfaces/: Abs.cpp  ActivationLut.cpp  AdaptiveAvgPool.cpp  Add.cpp  AddConst.cpp  Arange.cpp  Arg.cpp  Attention.cpp  AvgPool.cpp  BatchNorm.cpp  Cast.cpp  Ceil.cpp  Clip.cpp  Compare.cpp  CompareConst.cpp  Concat.cpp  ConstantFill.cpp  Conv.cpp  Copy.cpp  Cos.cpp  Cosh.cpp  CumSum.cpp  Deconv.cpp  DeformConv2D.cpp  Depth2Space.cpp  DequantizeLinear.cpp  Div.cpp  Elu.cpp  Erf.cpp  Exp.cpp  Expand.cpp  Flatten.cpp  Floor.cpp  GELU.cpp  GRU.cpp  Gather.cpp  GatherElements.cpp  GatherND.cpp  GridSampler.cpp  GroupNorm.cpp  (+86 more)
lib/dialects/operators/transforms/: assignCompilePhasePass.cpp  deinitPass.cpp  initPass.cpp  opreorderPass.cpp  platformDependentPasss.cpp  shape_inference.cpp  type_inference.cpp
lib/dialects/operators/transforms/platform/: commonPass.cpp  onnx.cpp  platormPassRegistry.cpp  svjson.cpp  torch.cpp
lib/interfaces/: CMakeLists.txt  ExternalExeInterface.cpp  LayerGroupInterface.cpp  MemInfoInferInterface.cpp  PackWeightInterface.cpp  ShapeInferInterface.cpp  TypeInferInterface.cpp
lib/support/: CMakeLists.txt  float16.cpp  float8.cpp  log.cpp  mathutil.cpp  module.cpp  patterns.cpp  tensorfile.cpp  utils.cpp
lib/support/targets/: opverifier.cpp  params.cpp  target.cpp
python/: CMakeLists.txt
python/tbc/: registAll.cpp
python/tbc/dialects/: operators.py  operators.td
python/tools/: model_runner.py  model_transform.py
python/transform/: BaseConverter.py  MLIRImporter.py  OnnxConverter.py  SVjsonConverter.py  SvHelper.py  TorchConverter.py  TorchHelper.py  TorchInterpreter.py
python/utils/: auto_remove.py  dtype_convert.py  misc.py  mlir_parser.py  mlir_shell.py
tools/: CMakeLists.txt
tools/tbc-opt/: CMakeLists.txt  main.cpp
(+4 files in other folders)
